@@ -37,9 +37,6 @@ class ModelSingleton(ModelStorage):
             for field_name in fields_names:
                 if field_name not in res:
                     res[field_name] = None
-            for field_name in list(res.keys()):
-                if field_name not in fields_names:
-                    del res[field_name]
             res['id'] = ids[0]
             return [res]
         res = super(ModelSingleton, cls).read([singleton.id], fields_names)
@@ -107,6 +104,5 @@ class ModelSingleton(ModelStorage):
                     if cls._fields[field]._type in ('many2one',):
                         fields_names.append(field + '.rec_name')
             default, = cls.read([singleton.id], fields_names=fields_names)
-            for field in (x for x in list(default.keys()) if x not in fields_names):
-                del default[field]
+            del default['id']
         return default
