@@ -1,3 +1,4 @@
+* New API to read related fields
 * Remove implicit fields names in ModelStorage.read
 * Check read access on field in search domain (issue7766)
 * Add active field on ModelAccess, ModelFieldAccess and Group
